@@ -15,6 +15,7 @@
 #include "Sim/Misc/TeamHandler.h"
 #include "System/GlobalConfig.h"
 #include "System/Misc/SpringTime.h"
+#include "System/myMath.h"
 
 /******************************************************************************/
 
@@ -26,73 +27,104 @@ void CPlayerRosterDrawer::Draw()
 
 	const unsigned currentTime = spring_now().toSecsi();
 
-	static std::string chart; chart = "";
-	static std::string prefix;
+	const char* prefix = "";
+	const char* formats[3] = {
+		"\xff%c%c%c \tNu\tm   \tUser name   \tCPU  \tPing",
+		"\xff%c%c%c%c \t%i \t%s   \t\xff%c%c%c%s   \t\xff%c%c%c%.0f%%  \t\xff%c%c%c%dms",
+		"\xff%c%c%c%c \t%i \t%s   \t\xff%c%c%c%s   \t%s-%d  \t%d",
+	};
 	char buf[128];
 
-	int count;
-	const std::vector<int>& indices = playerRoster.GetIndices(&count, true);
+	static std::string chart;
+	const std::vector<int>& playerIndices = playerRoster.GetIndices(true);
 
-	SNPRINTF(buf, sizeof(buf), "\xff%c%c%c \tNu\tm   \tUser name   \tCPU  \tPing", 255, 255, 63);
-	chart += buf;
+	SNPRINTF(buf, sizeof(buf), formats[0], 255, 255, 63);
+	chart.clear();
+	chart.append(buf);
 
-	for (int a = 0; a < count; ++a) {
-		const CPlayer* p = playerHandler->Player(indices[a]);
-		unsigned char color[3] = {255, 255, 255};
-		unsigned char allycolor[3] = {255, 255, 255};
+	for (size_t a = 0, s = playerIndices.size(); a < s; ++a) {
+		const CPlayer* p = playerHandler->Player(playerIndices[a]);
+
+		if (!p->active)
+			continue;
+
+		unsigned char teamColor[3] = {255, 255, 255};
+		unsigned char allyColor[3] = {255, 255, 255};
+
+		const char sep = (gu->spectating && !p->spectator && (gu->myTeam == p->team)) ? '-' : ' ';
 
 		if (p->ping != PATHING_FLAG || !gs->PreSimFrame()) {
 			if (p->spectator)
 				prefix = "S";
 			else {
 				const unsigned char* bColor = teamHandler->Team(p->team)->color;
-				color[0] = std::max((unsigned char)1, bColor[0]);
-				color[1] = std::max((unsigned char)1, bColor[1]);
-				color[2] = std::max((unsigned char)1, bColor[2]);
+
+				teamColor[0] = std::max((unsigned char)1, bColor[0]);
+				teamColor[1] = std::max((unsigned char)1, bColor[1]);
+				teamColor[2] = std::max((unsigned char)1, bColor[2]);
+
 				if (gu->myAllyTeam == teamHandler->AllyTeam(p->team)) {
-					allycolor[0] = allycolor[2] = 1;
+					allyColor[0] = allyColor[2] = 1;
 					prefix = "A";	// same AllyTeam
 				}
 				else if (teamHandler->AlliedTeams(gu->myTeam, p->team)) {
-					allycolor[0] = allycolor[1] = 1;
+					allyColor[0] = allyColor[1] = 1;
 					prefix = "E+";	// different AllyTeams, but are allied
 				}
 				else {
-					allycolor[1] = allycolor[2] = 1;
-					prefix = "E";	//no alliance at all
+					allyColor[1] = allyColor[2] = 1;
+					prefix = "E";	// no alliance at all
 				}
 			}
-			float4 cpucolor(!p->spectator && p->cpuUsage > 0.75f && gs->speedFactor < gs->wantedSpeedFactor * 0.99f &&
-				(currentTime & 128) ? 0.5f : std::max(0.01f, std::min(1.0f, p->cpuUsage * 2.0f / 0.75f)),
-					std::min(1.0f, std::max(0.01f, (1.0f - p->cpuUsage / 0.75f) * 2.0f)), 0.01f, 1.0f);
-			float4 pingcolor(!p->spectator && globalConfig->reconnectTimeout > 0 && p->ping > 1000 * globalConfig->reconnectTimeout &&
-					(currentTime & 128) ? 0.5f : std::max(0.01f, std::min(1.0f, (p->ping - 250) / 375.0f)),
-					std::min(1.0f, std::max(0.01f, (1000 - p->ping) / 375.0f)), 0.01f, 1.0f);
-			SNPRINTF(buf, sizeof(buf), "\xff%c%c%c%c \t%i \t%s   \t\xff%c%c%c%s   \t\xff%c%c%c%.0f%%  \t\xff%c%c%c%dms",
-					allycolor[0], allycolor[1], allycolor[2], (gu->spectating && !p->spectator && (gu->myTeam == p->team)) ? '-' : ' ',
-					p->team, prefix.c_str(), color[0], color[1], color[2], p->name.c_str(),
-					(unsigned char)(cpucolor[0] * 255.0f), (unsigned char)(cpucolor[1] * 255.0f), (unsigned char)(cpucolor[2] * 255.0f),
-					p->cpuUsage * 100.0f,
-					(unsigned char)(pingcolor[0] * 255.0f), (unsigned char)(pingcolor[1] * 255.0f), (unsigned char)(pingcolor[2] * 255.0f),
-					p->ping);
+
+			const bool cpuConstRed = !p->spectator && (p->cpuUsage > 0.75f) && (gs->speedFactor < gs->wantedSpeedFactor * 0.99f) && (currentTime & 128);
+			const bool pingConstRed = !p->spectator && (globalConfig->reconnectTimeout > 0) && (p->ping > 1000 * globalConfig->reconnectTimeout) && (currentTime & 128);
+
+			const float4 cpuColor(cpuConstRed ? 0.5f : Clamp(p->cpuUsage * 2.0f / 0.75f, 0.01f, 1.0f), Clamp((1.0f - p->cpuUsage / 0.75f) * 2.0f, 0.01f, 1.0f), 0.01f, 1.0f);
+			const float4 pingColor(pingConstRed ? 0.5f : Clamp((p->ping - 250) / 375.0f, 0.01f, 1.0f), Clamp((1000 - p->ping) / 375.0f, 0.01f, 1.0f), 0.01f, 1.0f);
+
+			SNPRINTF(
+				buf, sizeof(buf),
+				formats[1],
+				allyColor[0], allyColor[1], allyColor[2],
+				sep,
+				p->team,
+				prefix,
+				teamColor[0], teamColor[1], teamColor[2],
+				p->name.c_str(),
+				(unsigned char)(cpuColor[0] * 255.0f),
+				(unsigned char)(cpuColor[1] * 255.0f),
+				(unsigned char)(cpuColor[2] * 255.0f),
+				p->cpuUsage * 100.0f,
+				(unsigned char)(pingColor[0] * 255.0f),
+				(unsigned char)(pingColor[1] * 255.0f),
+				(unsigned char)(pingColor[2] * 255.0f),
+				p->ping
+			);
+		} else {
+			SNPRINTF(
+				buf, sizeof(buf),
+				formats[2],
+				allyColor[0], allyColor[1], allyColor[2],
+				sep,
+				p->team,
+				"",
+				teamColor[0], teamColor[1], teamColor[2],
+				p->name.c_str(),
+				(((int) p->cpuUsage) & 0x1)? "PC": "BO",
+				 ((int) p->cpuUsage) & 0xFE,
+				(((int) p->cpuUsage) >> 8) * 1000
+			);
 		}
-		else {
-			prefix = "";
-			SNPRINTF(buf, sizeof(buf), "\xff%c%c%c%c \t%i \t%s   \t\xff%c%c%c%s   \t%s-%d  \t%d",
-					allycolor[0], allycolor[1], allycolor[2], (gu->spectating && !p->spectator && (gu->myTeam == p->team)) ? '-' : ' ',
-					p->team, prefix.c_str(), color[0], color[1], color[2], p->name.c_str(), (((int)p->cpuUsage) & 0x1)?"PC":"BO",
-					((int)p->cpuUsage) & 0xFE, (((int)p->cpuUsage)>>8)*1000);
-		}
-		chart += "\n";
-		chart += buf;
+
+		chart.append("\n");
+		chart.append(buf);
 	}
 
-	int font_options = FONT_RIGHT | FONT_BOTTOM | FONT_SCALE | FONT_NORM;
-	if (guihandler->GetOutlineFonts())
-		font_options |= FONT_OUTLINE;
+	const int fontFlags = FONT_RIGHT | FONT_BOTTOM | FONT_SCALE | FONT_NORM | (guihandler->GetOutlineFonts() * FONT_OUTLINE);
 
 	smallFont->SetColors();
-	smallFont->glPrintTable(1.0f - 5 * globalRendering->pixelX, 0.00f + 5 * globalRendering->pixelY, 1.0f, font_options, chart);
+	smallFont->glPrintTable(1.0f - 5.0f * globalRendering->pixelX, 0.00f + 5.0f * globalRendering->pixelY, 1.0f, fontFlags, chart);
 }
 
 /******************************************************************************/
