@@ -14,10 +14,11 @@ Lua:
  - call gadgetHandler:Explosion for unsynced gadgets (but discard the return value)
  - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire
  - allow setting terrain-type hardness and name via Spring.SetTerrainTypeData
- - add Spring.GetLuaMemoryUsage to LuaUnsyncedRead
+ - add Spring.GetLuaMemUsage to LuaUnsyncedRead
    returns the number of (kilo-)bytes used and (kilo-)allocations performed
    by the calling Lua state individually, as well as by all states globally
  - add Spring.GetVidMemUsage to LuaUnsyncedRead
+ - fix Spring.GetPlayerRoster sometimes excluding active players
 
 Misc:
  - remove joystick support
